syntax_check.log
  File "run_agent.py", line 6360
    Some providers/routes reject `reasoning` with 400s, so gate it to
                                                    ^
SyntaxError: invalid decimal literal
